# nomopytools

./: .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt
src/: collections.py  collections_extensions.py  func.py  mailing.py  selenium.py  selenium_extensions.py  web.py
src/nomopytools/: console.py  logger.py  mail.py  ml.py  mongodb.py  pytorch.py  selenium_extensions.py  str.py  xpath.py
src/nomopytools/ml/: __init__.py  containers.py  globals.py  nlp.py  transformer.py  utils.py
src/nomopytools/security/: __init__.py  containers.py  passwordmanager.py  types.py
src/nomopytools/selenium_extensions/: __init__.py  base.py  chrome.py  firefox.py
